--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,129 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+html,
+body,
+#root,
+.App {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  text-align: center;
+  overflow: hidden;
+}
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.rootColumn {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: auto;
+}
+
+button {
+  min-height: 64px;
+  font-size: 32px;
+  width: 500px;
+  max-width: calc(100% - 16px);
+  flex: 0 0 auto;
+  background: none;
+
+  display: inline-block;
+  padding: 0;
+  border: 0.15em solid #000000;
+  margin: 4px;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  color: #000000;
+  text-align: center;
+  transition: all 0.2s;
+}
+
+button:hover {
+  color: #ffffff;
+  background-color: #000000;
+}
+
+button:active {
+  background-color: #555555;
+}
+
+button:disabled {
+  opacity: 0.3;
+  cursor: not-allowed;
+}
+
+h1 {
+  width: 500px;
+  max-width: calc(100% - 16px);
+  font-size: 250%;
+}
+
+h2 {
+  width: 500px;
+  max-width: calc(100% - 16px);
+  font-size: 150%;
+}
+
+.progresscontainer {
+  margin: 0px 4px;
+  position: relative;
+  height: 42px;
+  border: 3px solid #000000;
+  border-radius: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.progressbar {
+  background: #00000099;
+  border-radius: 2px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.choiceContainer {
+  width: 484px;
+  max-width: calc(100% - 32px);
+  margin: 6px;
+  padding: 8px;
+  border-radius: 4px;
+  background: #bbbbbb;
+}
+
+.choice {
+  display: flex;
+  align-items: center;
+}
+
+.choice button {
+  width: 48px;
+  height: 48px;
+  min-height: 48px;
+  font-size: 24px;
+  font-weight: 900;
+  border: 3px solid #000000;
+  border-radius: 2px;
+}
+
+.choice span {
+  flex: 1;
+  font-size: 28px;
 }
