--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ button {
 
   display: inline-block;
   padding: 0;
-  border: 0.15em solid #000000;
+  border: 4px solid #000000;
   margin: 4px;
   box-sizing: border-box;
   text-decoration: none;
@@ -126,4 +126,21 @@ h2 {
 .choice span {
   flex: 1;
   font-size: 28px;
+}
+
+table {
+  width: 496px;
+  max-width: calc(100% - 16px);
+  margin: 8px 0px;
+  border: 4px solid black;
+  border-collapse: collapse;
+}
+
+th,
+td {
+  border: 1px solid black;
+}
+
+th {
+  padding: 8px;
 }
