--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,15 @@ button {
   transition: all 0.2s;
 }
 
+.editor-input  {
+  min-height: 52px;
+  font-size: 150%;
+  width: 500px;
+  max-width: calc(100% - 16px);
+  border: 4px solid #000000;
+  margin: 4px;
+}
+
 button:hover {
   color: #ffffff;
   background-color: #000000;
