--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ code {
   overflow: auto;
 }
 
-button {
+.fullwidth-button {
   min-height: 52px;
   font-size: 150%;
   width: 500px;
@@ -40,31 +40,68 @@ button {
   flex: 0 0 auto;
   background: none;
 
-  display: inline-block;
-  padding: 0;
   border: 4px solid #000000;
   margin: 4px;
-  box-sizing: border-box;
-  text-decoration: none;
-  font-family: "Roboto", sans-serif;
+  padding: 0;
+
   font-weight: 500;
   color: #000000;
   text-align: center;
-  transition: all 0.2s;
 }
 
-button:hover {
+.fullwidth-button:hover {
   color: #ffffff;
   background-color: #000000;
 }
 
-button:active {
+.fullwidth-button:active {
   background-color: #555555;
 }
 
-button:disabled {
+.fullwidth-button:disabled {
   opacity: 0.3;
   cursor: not-allowed;
+}
+
+.editor-input {
+  min-height: 52px;
+  font-size: 150%;
+  width: 500px;
+  max-width: calc(100% - 16px);
+  border: 4px solid #000000;
+  margin: 4px;
+  padding: 0;
+  font-weight: 500;
+  color: #000000;
+  text-align: center;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+}
+
+.editor-input:hover {
+  color: #ffffff;
+  background-color: #000000;
+}
+
+input[type="file"] {
+  display: none;
+}
+
+.question-input {
+  width: 500px;
+  max-width: calc(100% - 16px);
+  border: 4px solid #000000;
+  margin: 4px;
+  padding: 4px;
+  box-sizing: border-box;
+
+  display: flex;
+  flex-direction: column;
+
+  flex: 0 0 auto;
 }
 
 h1 {
@@ -134,9 +171,11 @@ h2 {
 }
 
 table {
-  width: 496px;
-  max-width: calc(100% - 20px);
+  width: 500px;
+  max-width: calc(100% - 16px);
   margin: 8px 0px;
+  padding: 0px;
+  box-sizing: border-box;
   border: 4px solid black;
   border-collapse: collapse;
 }
@@ -161,4 +200,34 @@ th {
 .sliderValue {
   flex: 0;
   text-align: center;
+}
+
+.quiz-header {
+  width: 500px;
+  max-width: calc(100% - 16px);
+  margin: 0px;
+  margin-bottom: 12px;
+  padding: 4px;
+  box-sizing: border-box;
+
+  border-bottom: 3px solid black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.quiz-header button {
+  padding: 8px;
+  font-size: 100%;
+  border: 2px solid black;
+  background: none;
+}
+
+.quiz-header h1 {
+  text-align: left;
+}
+
+.share-link {
+  font-size: 150%;
+  margin-bottom: 16px;
 }
