--- a/src/index.css
+++ b/src/index.css
@@ -205,13 +205,16 @@ th {
 }
 
 .sliderValue {
-  width: calc(100% - 16px);
+  width: calc(100% - 24px);
+  padding: 2px;
   height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 
-  font-size: 120%;
+  font-family: "Lucida Console", Monaco, monospace;
+
+  font-size: 100%;
   font-weight: bold;
 }
 
